keypadder (0.2.0) stable; urgency=low

  [SMerrony]
  * Usability:   Minor layout improvements
  * Usability:   Add dropdown tab selector (Issue #8)
  * Usability:   Remove hard-coded limits on no. of keys and tabs

  [mgrojo]
  * Usability:   Add support for all the keys available

 -- SMerrony <merrony@gmail.com>  Fri, 17 Feb 2023 10:00:00 +0200
 