@@ -8,27 +8,27 @@ cols = 4	# No. of columns on this tab
 keys = [
   { label = "&agrave;", send = "RIGHTALT,GRAVE,A" }, # Raw USB keypresses
   { label = "&acirc;",  send = "@,0,0,E,2,SPACE" },  # Unicode method
-  { label = "&Agrave;", send = "RIGHTALT,GRAVE,^A" },
+  { label = "&Agrave;", send = "RIGHTALT,GRAVE,Shift+A" },
   { label = "&ccedil;", send = "RIGHTALT,COMMA,C" },
 # new row will start here
   { label = "&egrave;", send = "RIGHTALT,GRAVE,E" },
-  { label = "&ecirc;",  send = "RIGHTALT,^6,E" },
+  { label = "&ecirc;",  send = "RIGHTALT,Shift+6,E" },    
   { label = "&eacute;", send = "RIGHTALT,APOSTROPHE,E" },
-  { label = "&euml;",   send = "RIGHTALT,^2,E" },
+  { label = "&euml;",   send = "RIGHTALT,Shift+2,E" },
 #
   { label = "&igrave;", send = "RIGHTALT,GRAVE,I" },
-  { label = "&icirc;",  send = "RIGHTALT,^6,I" },
-  { label = "&iuml;",   send = "RIGHTALT,^2,I" },
+  { label = "&icirc;",  send = "RIGHTALT,Shift+6,I" },
+  { label = "&iuml;",   send = "RIGHTALT,Shift+2,I" },
   { label = "BLANK" },
 #
   { label = "&ograve;", send = "RIGHTALT,GRAVE,O" },
-  { label = "&ocirc;",  send = "RIGHTALT,^6,O" },
-  { label = "&Ocirc;",  send = "RIGHTALT,^6,^O" },
+  { label = "&ocirc;",  send = "RIGHTALT,Shift+6,O" },
+  { label = "&Ocirc;",  send = "RIGHTALT,Shift+6,Shift+O" },
   { label = "&oelig;",  send = "@,0,1,5,3,SPACE" },
 #
   { label = "&ugrave;", send = "RIGHTALT,GRAVE,U" },
-  { label = "&ucirc;",  send = "RIGHTALT,^6,U" },
-  { label = "&uuml;",   send = "RIGHTALT,^2,U" },
+  { label = "&ucirc;",  send = "RIGHTALT,Shift+6,U" },
+  { label = "&uuml;",   send = "RIGHTALT,Shift+2,U" },
   { label = "&euro;",   send = "@,2,0,A,C,SPACE"}
 ]
 
@@ -38,18 +38,18 @@ cols = 4
 keys = [
   { label = "Esc", send = "ESC" },
   { label = ">",   send = "V" },
-  { label = ".",   send = "^S" },
+  { label = ".",   send = "Shift+S" },
   { label = "_",   send = "N" },
 #
   { label = "&#x266e;", send = "EQUAL" },  # Natural
-  { label = "&#x266f;", send = "^EQUAL" }, # Sharp
+  { label = "&#x266f;", send = "Shift+EQUAL" }, # Sharp
   { label = "&#x266d;", send = "MINUS" },  # Flat
-  { label = "Save",     send = "!S" },     # Save
+  { label = "Save",     send = "Ctrl+S" },     # Save
 #
   { label = "&#x2669;",  send = "5" },     # Crotchet
   { label = "&#x1d15e;", send = "6" },     # Minim
   { label = "&#x1d15d;", send = "7" },     # Semibreve
-  { label = "Redo",      send = "!^Z" },   # Redo
+  { label = "Redo",      send = "Ctrl+Shift+Z" },   # Redo
 #
   { label = "&#x1d162;", send = "2" },     # Demisemiquaver
   { label = "&#x266c;",  send = "3" },     # Semiquaver
@@ -118,4 +118,18 @@ keys = [
   { label = "&#x1F505;", send = "BRIGHTNESSDOWN" },
   { label = "&#x1F506;", send = "BRIGHTNESSUP" },
   { label = "&#x1F5A5;", send = "SWITCHVIDEOMODE" },
+]
+
+[[tab]]
+label = "LibreOffice" # Testing all the modifiers
+cols = 2
+keys = [
+   { label = "Help",      send = "F1" },
+   { label = "Options",   send = "Alt+F12" },
+   { label = "Spell",     send = "Shift+F7" },
+   { label = "Thes.",     send = "Ctrl+F7" },
+   { label = "Currency",  send = "Ctrl+Shift+4" },
+   { label = "Percent",   send = "Ctrl+Shift+5" },
+   { label = "Comment",   send = "Ctrl+Alt+C" },
+   { label = "PasteUnf",  send = "Ctrl+Alt+Shift+V" },
 ]
